<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/story_card"
    android:layout_width="match_parent"
    android:clickable="true"
    android:layout_height="wrap_content"
    app:cardCornerRadius="12dp"
    android:layout_marginHorizontal="8dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_info_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp">

            <TextView
                android:id="@+id/tv_user_monogram"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/monogram_background"
                android:gravity="center"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/garrett_sears_initial" />

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_user_monogram"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/garrett_sears" />

            <TextView
                android:id="@+id/tv_item_date"
                style="@style/TextAppearance.Material3.BodyMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                app:layout_constraintBottom_toBottomOf="parent "
                app:layout_constraintStart_toEndOf="@id/tv_user_monogram"
                app:layout_constraintTop_toBottomOf="@id/tv_item_name"
                tools:text="@string/dummy_date" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="match_parent"
            android:contentDescription="@string/story_photo"
            android:layout_height="236dp"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>

